--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: changes
     if: ${{ needs.changes.outputs.price-fetcher == 'true' || needs.changes.outputs.run-all == 'true' }}
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
       
@@ -49,6 +50,7 @@ jobs:
           docker build --target test -t price-fetcher:test ./price-fetcher
           
       - name: Run Price Fetcher tests
+        timeout-minutes: 5
         run: |
           docker run --rm \
             -e API_KEY=test_api_key \
@@ -57,6 +59,30 @@ jobs:
       - name: Build Price Fetcher runtime image
         run: |
           docker build --target runtime -t price-fetcher:runtime ./price-fetcher
+          
+      - name: Test Price Fetcher runtime health
+        timeout-minutes: 2
+        run: |
+          # Start the runtime container for health check
+          docker run -d --name price-fetcher-test \
+            -p 8000:8000 \
+            -e API_KEY=test_api_key \
+            price-fetcher:runtime
+          
+          # Wait for startup and test health endpoint
+          sleep 10
+          for i in {1..6}; do
+            if curl -f -s http://localhost:8000/health > /dev/null; then
+              echo "✅ Price fetcher health check passed"
+              break
+            fi
+            echo "Waiting for health check... ($i/6)"
+            sleep 5
+          done
+          
+          # Cleanup
+          docker stop price-fetcher-test
+          docker rm price-fetcher-test
 
   test-api-gateway:
     runs-on: ubuntu-latest
@@ -125,7 +151,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [changes, test-price-fetcher, test-api-gateway]
     if: always() && (needs.changes.outputs.price-fetcher == 'true' || needs.changes.outputs.api-gateway == 'true' || needs.changes.outputs.run-all == 'true')
-    timeout-minutes: 15
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
       
@@ -141,32 +167,33 @@ jobs:
           docker compose -f docker-compose.test.yml up -d
           
       - name: Wait for services to be ready
-        timeout-minutes: 8
+        timeout-minutes: 10
         run: |
           echo "Waiting for services to start..."
-          sleep 60  # Give API gateway time to fully initialize
           
           # Check if containers are running
           docker compose -f docker-compose.test.yml ps
           
-          # Wait for services with appropriate timing
-          echo "Testing service connectivity..."
-          for i in {1..12}; do
-            if curl -s http://localhost:8000/health > /dev/null 2>&1; then
-              echo "✓ price-fetcher is responding"
+          # Wait for price-fetcher first (it's simpler)
+          echo "Testing price-fetcher connectivity..."
+          for i in {1..20}; do
+            if curl -f -s http://localhost:8000/health > /dev/null 2>&1; then
+              echo "✅ price-fetcher is responding"
               break
             fi
-            echo "Waiting for price-fetcher... ($i/12)"
-            sleep 5
+            echo "Waiting for price-fetcher... ($i/20)"
+            sleep 10
           done
           
-          for i in {1..12}; do
-            if curl -s http://localhost:8080/health > /dev/null 2>&1; then
-              echo "✓ api-gateway is responding"
+          # Wait for api-gateway (depends on price-fetcher)
+          echo "Testing api-gateway connectivity..."
+          for i in {1..24}; do
+            if curl -f -s http://localhost:8080/health > /dev/null 2>&1; then
+              echo "✅ api-gateway is responding"
               break
             fi
-            echo "Waiting for api-gateway... ($i/12)"
-            sleep 10  # Longer wait between checks for API gateway
+            echo "Waiting for api-gateway... ($i/24)"
+            sleep 15
           done
           
       - name: Show service status on failure
@@ -174,12 +201,15 @@ jobs:
         run: |
           echo "=== Docker Compose Services ==="
           docker compose -f docker-compose.test.yml ps
+          echo ""
           echo "=== Price Fetcher logs ==="
           docker compose -f docker-compose.test.yml logs price-fetcher
+          echo ""
           echo "=== API Gateway logs ==="
           docker compose -f docker-compose.test.yml logs api-gateway
           
       - name: Test API endpoints
+        timeout-minutes: 5
         run: |
           echo "🧪 Testing API Endpoints"
           echo "========================"
@@ -190,6 +220,7 @@ jobs:
             echo "✅ Price fetcher health check passed"
           else
             echo "❌ Price fetcher health check failed"
+            curl -v http://localhost:8000/health || true
             exit 1
           fi
           
@@ -199,11 +230,20 @@ jobs:
             echo "✅ API gateway health check passed"
           else
             echo "❌ API gateway health check failed"
+            curl -v http://localhost:8080/health || true
             exit 1
           fi
           
-          # Test games search endpoint (only if real API key is available)
-          echo "Testing games search endpoint..."
+          # Test price-fetcher game search endpoint
+          echo "Testing price-fetcher game search..."
+          if curl -f -s "http://localhost:8000/game-ids?title=test" > /dev/null; then
+            echo "✅ Price fetcher game search passed"
+          else
+            echo "ℹ️  Price fetcher game search failed (expected with test API key)"
+          fi
+          
+          # Test api-gateway games search endpoint (only if real API key is available)
+          echo "Testing api-gateway games search endpoint..."
           if [ "${{ secrets.ISTHEREANYDEAL_API_KEY }}" != "" ]; then
             if curl -f -s "http://localhost:8080/api/games/search?query=test" > /dev/null; then
               echo "✅ Games search endpoint passed"
@@ -212,10 +252,18 @@ jobs:
               exit 1
             fi
           else
-            echo "ℹ️  Skipping games search test (no API key configured)"
+            echo "ℹ️  Skipping games search test (no real API key configured)"
           fi
           
-          echo "🎉 All endpoint tests passed!"
+          # Test price endpoint with mock data
+          echo "Testing price endpoint..."
+          if curl -f -s "http://localhost:8000/prices?id=test-game-id" > /dev/null; then
+            echo "✅ Price endpoint responded"
+          else
+            echo "ℹ️  Price endpoint failed (expected with test API key)"
+          fi
+          
+          echo "🎉 All endpoint tests completed!"
           
       - name: Show final service status
         if: always()
@@ -235,35 +283,36 @@ jobs:
     steps:
       - name: Verify all tests passed
         run: |
+          echo "🔍 Test Results Summary"
+          echo "======================="
           echo "Price Fetcher Tests: ${{ needs.test-price-fetcher.result }}"
           echo "API Gateway Tests: ${{ needs.test-api-gateway.result }}"
           echo "Web Tests: ${{ needs.test-web.result }}"
           echo "Integration Tests: ${{ needs.integration-tests.result }}"
+          echo ""
           
           # Check if any required tests failed (skip if they were skipped)
-          if [[ "${{ needs.test-price-fetcher.result }}" == "failure" || 
-                "${{ needs.test-api-gateway.result }}" == "failure" || 
-                "${{ needs.test-web.result }}" == "failure" || 
-                "${{ needs.integration-tests.result }}" == "failure" ]]; then
-            echo "❌ Some tests failed"
+          failed_tests=()
+          
+          if [[ "${{ needs.test-price-fetcher.result }}" == "failure" ]]; then
+            failed_tests+=("Price Fetcher")
+          fi
+          
+          if [[ "${{ needs.test-api-gateway.result }}" == "failure" ]]; then
+            failed_tests+=("API Gateway")
+          fi
+          
+          if [[ "${{ needs.test-web.result }}" == "failure" ]]; then
+            failed_tests+=("Web")
+          fi
+          
+          if [[ "${{ needs.integration-tests.result }}" == "failure" ]]; then
+            failed_tests+=("Integration")
+          fi
+          
+          if [ ${#failed_tests[@]} -gt 0 ]; then
+            echo "❌ Failed tests: ${failed_tests[*]}"
             exit 1
           else
             echo "✅ All tests completed successfully"
           fi
-
-  debug:
-    runs-on: ubuntu-latest
-    needs: changes
-    steps:
-      - name: Debug workflow values
-        run: |
-          echo "🔍 Workflow Debug Information"
-          echo "================================"
-          echo "run_all_tests input: ${{ inputs.run_all_tests }}"
-          echo "commit message contains [test all]: ${{ contains(github.event.head_commit.message, '[test all]') }}"
-          echo "run-all output: ${{ needs.changes.outputs.run-all }}"
-          echo "price-fetcher changed: ${{ needs.changes.outputs.price-fetcher }}"
-          echo "api-gateway changed: ${{ needs.changes.outputs.api-gateway }}"
-          echo "web changed: ${{ needs.changes.outputs.web }}"
-          echo "event name: ${{ github.event_name }}"
-          echo "ref: ${{ github.ref }}"
