--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,10 +9,10 @@ services:
       - API_KEY=${API_KEY}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 5s        # Reduced from 15s
-      timeout: 3s         # Reduced from 10s
-      retries: 3          # Reduced from 5
-      start_period: 10s   # Reduced from 30s
+      interval: 5s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
     networks:
       - test-network
 
@@ -29,12 +29,21 @@ services:
     depends_on:
       price-fetcher:
         condition: service_healthy
+      redis:
+        condition: service_started
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-      interval: 5s        # Reduced from 30s
-      timeout: 3s         # Reduced from 15s
-      retries: 3          # Reduced from 5
-      start_period: 20s   # Reduced from 120s
+      interval: 5s
+      timeout: 3s
+      retries: 3
+      start_period: 20s
+    networks:
+      - test-network
+
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
     networks:
       - test-network
 
