--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,35 @@ services:
       - john-network
     entrypoint: [ "sleep", "infinity" ]
 
+  loki:
+    image: grafana/loki:2.9.7
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - john-network
+
+  promtail:
+    image: grafana/promtail:2.9.7
+    volumes:
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./promtail-config.yml:/etc/promtail/config.yml
+    command: -config.file=/etc/promtail/config.yml
+    networks:
+      - john-network
+    depends_on:
+      - loki
+
+  grafana:
+    image: grafana/grafana:10.4.2
+    ports:
+      - "3001:3000"
+    networks:
+      - john-network
+    depends_on:
+      - loki
+
 networks:
   john-network:
     driver: bridge
