--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,8 @@ services:
     image: grafana/grafana:10.4.2
     ports:
       - "3001:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
     networks:
       - john-network
     depends_on:
@@ -95,3 +97,6 @@ networks:
   john-network:
     driver: bridge
     name: johns-game-price-network
+
+volumes:
+  grafana-data:
