--- a/promtail-config.yml
+++ b/promtail-config.yml
@@ -13,10 +13,17 @@ scrape_configs:
     docker_sd_configs:
       - host: unix:///var/run/docker.sock
     relabel_configs:
+      # Exclude Loki, Promtail, and Grafana containers
+      - source_labels: [__meta_docker_container_name]
+        regex: /(loki|promtail|grafana)(-\d+)?$
+        action: drop
       - source_labels: [__meta_docker_container_label_com_docker_compose_service]
         target_label: compose_service
       - source_labels: [__meta_docker_container_name]
         regex: '/(.*)'
         target_label: container
+      - source_labels: [__meta_docker_container_label_*]
+        action: labelmap
+        regex: __meta_docker_container_label_(.+)
     pipeline_stages:
       - docker: {}
