--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'typescript', 'python' ]
+        language: [ 'typescript', 'python', 'javascript' ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
