--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,49 +8,66 @@ on:
   workflow_dispatch:
 
 jobs:
-  integration-tests:
+  unit-tests-api-gateway:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
     steps:
       - uses: actions/checkout@v4
-
       - name: Install bun
         run: |
           curl -fsSL https://bun.sh/install | bash
           echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
           echo "PATH=$HOME/.bun/bin:$PATH" >> $GITHUB_ENV
-
-      - name: Install dependencies (api-gateway)
+      - name: Install dependencies
         working-directory: api-gateway
         run: bun install
-
-      - name: Run unit tests (api-gateway)
+      - name: Run unit tests
         working-directory: api-gateway
         run: bun test
 
-      - name: Install dependencies (web)
+  unit-tests-web:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install bun
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+          echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
+          echo "PATH=$HOME/.bun/bin:$PATH" >> $GITHUB_ENV
+      - name: Install dependencies
         working-directory: web
         run: bun install
-
-      - name: Run unit tests (web)
+      - name: Run unit tests
         working-directory: web
         run: bun test
 
+  unit-tests-price-fetcher:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
-      - name: Install dependencies (price-fetcher)
+      - name: Install dependencies
         working-directory: price-fetcher
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
-
-      - name: Run unit tests (price-fetcher)
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/price-fetcher/src" >> $GITHUB_ENV
+      - name: Run unit tests
         working-directory: price-fetcher
+        env:
+          PYTHONPATH: src
+          API_KEY: dummyapikey
         run: pytest
+
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    needs: [unit-tests-api-gateway, unit-tests-web, unit-tests-price-fetcher]
+    steps:
+      - uses: actions/checkout@v4
 
       - name: Set up KinD cluster
         uses: helm/kind-action@v1
@@ -91,6 +108,24 @@ jobs:
           kubectl port-forward svc/api-gateway 8080:8080 &
           kubectl port-forward svc/price-fetcher 8000:8000 &
           sleep 10
+
+      - name: Upload kubeconfig for integration tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: kubeconfig
+          path: ${{ env.HOME }}/.kube/config
+
+  integration-tests:
+    runs-on: ubuntu-latest
+    needs: build-and-deploy
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download kubeconfig
+        uses: actions/download-artifact@v4
+        with:
+          name: kubeconfig
+          path: ${{ env.HOME }}/.kube
 
       - name: Test API endpoints
         timeout-minutes: 5
